--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Prueba</title>
+	<title>Login</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 </head>
 
@@ -44,10 +44,7 @@
   <input type="number" name="numero" placeholder="+569" required>
 </div>
 
-<div class="checkbox">
-  <label>Acepta los terminos:</label>
-  Si <input type="checkbox" name="terminos" required>
-</div> 
+
 
 
 
